# is-it-open

./: .gitignore  CLAUDE.md  docker-compose.prod.yml
backend/: Dockerfile  README_DEPLOY.md  pyproject.toml  sample.env
backend/apps/places/: api.py  models.py
backend/apps/places/migrations/: 0005_place_categories_place_phone_place_website.py  0006_savedplace_average_visit_length.py
backend/apps/users/: api.py  models.py  tests_profile.py
backend/apps/users/migrations/: 0003_userprofile_home_address_userprofile_home_lat_and_more.py  0005_userprofile_calendar_subscription_url.py
backend/config/: settings.py
backend/services/: tomtom.py
backend/tests/: test_tomtom.py
docs/superpowers/plans/: 2026-04-20-calendar-bloc-refactor.md  2026-04-20-calendar-screen-refactor.md  2026-04-21-audit-profile-api.md  2026-04-21-personal-calendar-detail-integration.md
docs/superpowers/specs/: 2026-04-21-audit-profile-api-design.md  2026-04-21-personal-calendar-detail-integration-design.md
frontend/: pubspec.yaml
frontend/assets/GlassIcon.icon/: icon.json
frontend/envs/: dev.json
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/core/: env_config.dart
frontend/lib/models/: place.dart  saved_place.dart  user.dart
frontend/lib/screens/: map_screen.dart  me_screen.dart
frontend/lib/services/: api_service.dart
frontend/lib/utils/: app_theme.dart  (+1 more)
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
(+28 files in other folders)
